--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Euclid Algorithm</title>
+    <title>Euclid Algorithm with Steps</title>
   </head>
   <body>
-    <h1>Euclid Algorithm for GCD</h1>
+    <h1>Euclid Algorithm for GCD (with Steps)</h1>
+
     <label for="num1">Number 1:</label>
     <input type="number" id="num1" />
     <br /><br />
@@ -17,7 +18,11 @@
 
     <button onclick="calculateGCD()">Calculate GCD</button>
 
+    <h3>Result:</h3>
     <p id="result"></p>
+
+    <h3>Steps:</h3>
+    <ul id="steps"></ul>
 
     <script src="script.js"></script>
   </body>
